<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/madeira"
    android:orientation="vertical" >

    <ImageView 
        android:id="@+id/img_logo"
        android:contentDescription="@string/welcome"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:layout_marginBottom="15dp"
    	android:layout_marginTop="15dp"
    	android:src="@drawable/trackmap_logo" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_newJourney"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/start" />


        <Button
            android:id="@+id/btn_actualJourney"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/actual_journey" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false"
        android:gravity="center_horizontal" >


        <Button
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/history" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/help" />

    </TableRow>
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:padding="10dp"
        android:text="@string/welcome"
        android:textSize="18sp" />

</TableLayout>