<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/madeira"
	android:orientation="vertical">
<!-- 	android:background="@color/DarkGrey" -->
        
<!--  Map-Fragment -->
    <fragment
        android:id="@+id/map"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:layout_gravity="top"
        class="com.google.android.gms.maps.SupportMapFragment" />
 
<!--  Button-Area    -->

    <TableLayout
        android:id="@+id/replayButtonRow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

	    <TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:layout_gravity="center_horizontal"
	        android:baselineAligned="false"
	        android:layout_margin="10dp"
	        android:gravity="center" >
	
	        <Button
	            android:id="@+id/btn_previous"
	            android:layout_width="0dp"
	            android:layout_height="100dp"
	            android:layout_weight="1"
	            android:text="@string/label_btn_previous" />
	
	        <Button
	            android:id="@+id/btn_play"
	            android:layout_width="0dp"
	            android:layout_height="100dp"
	            android:layout_weight="1"
	            android:text="@string/label_btn_play" />
	
	        <Button
	            android:id="@+id/btn_next"
	            android:layout_width="0dp"
	            android:layout_height="100dp"
	            android:layout_weight="1"
	            android:text="@string/label_btn_next" />
        
	    </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/trackingButtonRow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

	    <TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent"
	        android:layout_gravity="center_horizontal"
	        android:baselineAligned="false"
	        android:layout_margin="10dp"
	        android:gravity="center" >
	
	        <Button
	            android:id="@+id/btn_pauseTracking"
	            android:layout_width="0dp"
	            android:layout_height="100dp"
	            android:layout_weight="1"
	            android:text="@string/label_btn_pauseTracking" />
	
	        <Button
	            android:id="@+id/btn_addPoi"
	            android:layout_width="0dp"
	            android:layout_height="100dp"
	            android:layout_weight="1"
	            android:text="@string/label_btn_addPoi" />
	
	        	<Button
	            android:id="@+id/btn_stropTracking"
	            android:layout_width="0dp"
	            android:layout_height="100dp"
	            android:layout_weight="1"
	            android:text="@string/label_btn_stopTracking" />
        
	    </TableRow>
    </TableLayout>
</LinearLayout>

<!-- <fragment xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:id="@+id/map" -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="match_parent" -->
<!--     class="com.google.android.gms.maps.SupportMapFragment" /> -->
